--- a/src/css/main.css
+++ b/src/css/main.css
@@ -771,6 +771,18 @@ html {
   .tab:hover {
     --tw-text-opacity: 1;
   }
+
+  .table tr.hover:hover,
+  .table tr.hover:nth-child(even):hover {
+    --tw-bg-opacity: 1;
+    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
+  }
+
+  .table-zebra tr.hover:hover,
+  .table-zebra tr.hover:nth-child(even):hover {
+    --tw-bg-opacity: 1;
+    background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
+  }
 }
 
 @media (hover: hover) {
@@ -1216,6 +1228,26 @@ input.tab:checked + .tab-content,
   --tab-padding: 0.5rem;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.z-\[\] {
+  z-index: ;
+}
+
+.z-\[99\] {
+  z-index: 99;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1260,6 +1292,18 @@ input.tab:checked + .tab-content,
   height: 40px;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[3\] {
+  height: 3;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
 .w-\[103px\] {
   width: 103px;
 }
@@ -1296,6 +1340,18 @@ input.tab:checked + .tab-content,
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[30px\] {
+  width: 30px;
+}
+
+.w-\[40px\] {
+  width: 40px;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1320,6 +1376,14 @@ input.tab:checked + .tab-content,
   border-radius: 8px;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-\[2px\] {
+  border-radius: 2px;
+}
+
 .border-\[1px\] {
   border-width: 1px;
 }
@@ -1330,6 +1394,10 @@ input.tab:checked + .tab-content,
 
 .border-b-\[1px\] {
   border-bottom-width: 1px;
+}
+
+.border-s {
+  border-inline-start-width: 1px;
 }
 
 .border-solid {
@@ -1348,6 +1416,26 @@ input.tab:checked + .tab-content,
 .border-\[\#dbdbdb\] {
   --tw-border-opacity: 1;
   border-color: rgb(219 219 219 / var(--tw-border-opacity, 1));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#bababa\] {
@@ -1395,6 +1483,11 @@ input.tab:checked + .tab-content,
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#2b2b2b\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 43 43 / var(--tw-bg-opacity, 1));
+}
+
 .pr-\[13px\] {
   padding-right: 13px;
 }
@@ -1409,6 +1502,14 @@ input.tab:checked + .tab-content,
 
 .font-\[\'Yekan\'\] {
   font-family: 'Yekan';
+}
+
+.font-\[\] {
+  font-family: ;
+}
+
+.font-\[b\] {
+  font-family: b;
 }
 
 .text-\[14px\] {
@@ -1431,6 +1532,14 @@ input.tab:checked + .tab-content,
   font-size: 30px;
 }
 
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-\[17px\] {
+  font-size: 17px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1441,6 +1550,10 @@ input.tab:checked + .tab-content,
 
 .font-thin {
   font-weight: 100;
+}
+
+.font-extralight {
+  font-weight: 200;
 }
 
 .not-italic {
@@ -1469,6 +1582,10 @@ input.tab:checked + .tab-content,
 
 .leading-\[21px\] {
   line-height: 21px;
+}
+
+.leading-\[28px\] {
+  line-height: 28px;
 }
 
 .text-\[\#58595B\] {
@@ -1519,6 +1636,120 @@ input.tab:checked + .tab-content,
   text-decoration-line: none;
 }
 
+.opacity-100 {
+  opacity: 1;
+}
+
+.opacity-\[\] {
+  opacity: ;
+}
+
+.opacity-\[0\.1\] {
+  opacity: 0.1;
+}
+
+.opacity-\[0\.9\] {
+  opacity: 0.9;
+}
+
+.opacity-\[0\.4\] {
+  opacity: 0.4;
+}
+
+.shadow-\[0_35px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 35px 60px -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 35px 60px -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 60px -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 60px -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 60px -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 60px -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 0 60px -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 0 60px -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_2_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 0 2 -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 0 2 -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_25px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 0 25px -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 0 25px -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0__-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 0  -15px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 0 -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_25px__rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 0 25px  rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 0 25px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_25px_25px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  --tw-shadow: 0 0 25px 25px rgba(0,0,0,0.3);
+  --tw-shadow-colored: 0 0 25px 25px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[\] {
+  --tw-shadow-color: ;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#2b2b2b\] {
+  --tw-shadow-color: #2b2b2b;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1559,6 +1790,10 @@ input.tab:checked + .tab-content,
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:opacity-100:hover {
+  opacity: 1;
 }
 
 @media (min-width: 340px) {
@@ -1713,6 +1948,14 @@ input.tab:checked + .tab-content,
     width: 98%;
   }
 
+  .mobile\:w-\[140px\] {
+    width: 140px;
+  }
+
+  .mobile\:w-\[160px\] {
+    width: 160px;
+  }
+
   .mobile\:cursor-pointer {
     cursor: pointer;
   }
@@ -1864,6 +2107,10 @@ input.tab:checked + .tab-content,
     font-size: 20px;
   }
 
+  .mobile\:text-\[17px\] {
+    font-size: 17px;
+  }
+
   .mobile\:font-extralight {
     font-weight: 200;
   }
@@ -1944,6 +2191,10 @@ input.tab:checked + .tab-content,
 
   .tablet\:flex {
     display: flex;
+  }
+
+  .tablet\:hidden {
+    display: none;
   }
 
   .tablet\:h-\[100\%\] {
@@ -2050,6 +2301,10 @@ input.tab:checked + .tab-content,
     width: 205px;
   }
 
+  .tablet\:w-\[315px\] {
+    width: 315px;
+  }
+
   .tablet\:flex-row {
     flex-direction: row;
   }
@@ -2100,6 +2355,10 @@ input.tab:checked + .tab-content,
 
   .tablet\:gap-4 {
     gap: 1rem;
+  }
+
+  .tablet\:gap-\[15px\] {
+    gap: 15px;
   }
 
   .tablet\:bg-\[\#E8E8E8\] {
@@ -2190,6 +2449,10 @@ input.tab:checked + .tab-content,
     box-sizing: border-box;
   }
 
+  .desktop\:block {
+    display: block;
+  }
+
   .desktop\:flex {
     display: flex;
   }
@@ -2276,6 +2539,10 @@ input.tab:checked + .tab-content,
 
   .desktop\:h-\[270px\] {
     height: 270px;
+  }
+
+  .desktop\:h-\[600px\] {
+    height: 600px;
   }
 
   .desktop\:w-\[100\%\] {
@@ -2368,6 +2635,22 @@ input.tab:checked + .tab-content,
 
   .desktop\:w-\[205px\] {
     width: 205px;
+  }
+
+  .desktop\:w-\[140px\] {
+    width: 140px;
+  }
+
+  .desktop\:w-\[160px\] {
+    width: 160px;
+  }
+
+  .desktop\:w-\[10px\] {
+    width: 10px;
+  }
+
+  .desktop\:w-\[315px\] {
+    width: 315px;
   }
 
   .desktop\:flex-row {
